<?xml version="1.0"?>
<package>
  <name>discrete_controller</name>
  <version>0.0.0</version>
  <description>The discrete_controller package</description>

  <maintainer email="bonghi@dis.uniroma1.it">Raffaello Bonghi</maintainer>

  <license>BSD</license>

    <url type="repository">https://github.com/rbonghi/discrete_controller</url>
    <author email="bonghi@dis.uniroma1.it">Raffaello Bonghi</author>

    <buildtool_depend>catkin</buildtool_depend>
  
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>

</package>
